--- a/.drone.yml
+++ b/.drone.yml
@@ -29,3 +29,23 @@ trigger:
     - "refs/heads/**"
     - "refs/pull/**"
     - "refs/tags/**"
+
+---
+workspace:
+  base: /go
+  path: src/github.com/crusttech/crust
+
+kind: pipeline
+name: integration
+
+steps:
+- name: build
+  image: golang:1.11-alpine
+  environment:
+    CGO_ENABLED: 0
+    GOOS: linux
+    GOARCH: amd64
+  commands:
+  - go test -v --tags=integration ./internal/http/...
+
+trigger:
