add(all): database migration integration test

--- a/.drone.yml
+++ b/.drone.yml
@@ -44,7 +44,10 @@ steps:
     GOARCH: amd64
   commands:
   - wait-for-it.sh -t 60 --strict crust-db:3306 -- echo "Crust DB1 is up"
-  - go test -v --tags=integration ./internal/http/...
+  - go test -v --tags=integrationExternal ./internal/http/...
+  - go test -v --tags=integration ./system/db/...
+  - go test -v --tags=integration ./messaging/db/...
+  - go test -v --tags=integration ./crm/db/...
 
 services:
 - name: crust-db
