upd(all): integration tests
- tag all tests with unit, integration, and/or external
- fix tests to work with recent refactoring,
- add mysql service into drone for integration tests

--- a/.drone.yml
+++ b/.drone.yml
@@ -43,12 +43,14 @@ steps:
     GOOS: linux
     GOARCH: amd64
     CI: circleci
+    AUTH_OIDC_ENABLED: 0
+    AUTH_JWT_SECRET: bRxJ37sJ6Qu4
   commands:
+  - go fmt ./cmd/... ./internal/... ./crm/... ./messaging/... ./system/...
+  - make mocks
   - wait-for-it.sh -t 60 --strict crust-db:3306 -- echo "Crust DB1 is up"
-  - gotest -v --tags=integrationExternal ./internal/http/...
-  - gotest -v --tags=integration ./system/db/...
-  - gotest -v --tags=integration ./messaging/db/...
-  - gotest -v --tags=integration ./crm/db/...
+  - gotest -v --tags="migrations" ./system/db/... ./crm/db/... ./messaging/db/...
+  - gotest -v --tags="unit integration external" ./internal/... ./system/... ./crm/... ./messaging/...
 
 services:
 - name: crust-db
