fix(all): build and TestMain

--- a/.drone.yml
+++ b/.drone.yml
@@ -49,11 +49,11 @@ steps:
   - go fmt ./cmd/... ./internal/... ./crm/... ./messaging/... ./system/...
   - make mocks
   # check all tests are able to build
-  - go test -run=^$ --tags="migrations unit integration external" ./cmd/... ./internal/... ./crm/... ./messaging/... ./system/...
   - wait-for-it.sh -t 60 --strict crust-db:3306 -- echo "Crust DB1 is up"
   - gotest -v --tags="migrations" ./system/db/...
   - gotest -v --tags="migrations" ./crm/db/...
   - gotest -v --tags="migrations" ./messaging/db/...
+  - go test -run=^$ --tags="unit integration external" ./cmd/... ./internal/... ./crm/... ./messaging/... ./system/...
   - gotest -failfast --coverprofile=coverage.txt -v --tags="unit integration external" ./internal/... ./system/... ./crm/... ./messaging/...
 - name: coverage
   image: plugins/codecov
